--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
 						
 						// Check if renter_pkh (index 5) indicates not rented
 						const renter_pkh = datum[5];
-						if (renter_pkh && renter_pkh.constructor === 1) { // Only show available (not rented)
-							const nft_name = datum[8] && datum[8].bytes ? hexToString(datum[8].bytes) : 'Unknown';
-							const daily_fee = datum[1] && datum[1].int ? Number(datum[1].int) : 0;
-							const min_days = datum[2] && datum[2].int ? datum[2].int : 0;
-							const max_days = datum[3] && datum[3].int ? datum[3].int : 0;
+						if (renter_pkh && renter_pkh.index === 1) { // Only show available (not rented)
+							const nft_name = datum[8] && typeof datum[8] === 'string' ? hexToString(datum[8]) : 'Unknown';
+							const daily_fee = datum[1] && typeof datum[1] === 'bigint' ? Number(datum[1]) : 0;
+							const min_days = datum[2] && typeof datum[2] === 'bigint' ? Number(datum[2]) : 0;
+							const max_days = datum[3] && typeof datum[3] === 'bigint' ? Number(datum[3]) : 0;
 							
 							const option = document.createElement('option');
 							option.value = utxo.txHash + '#' + utxo.outputIndex;
@@ -237,7 +237,7 @@
 				const datum = rawDatum;
 
 				if (days < datum[2].int || days > datum[3].int) throw new Error('Days out of range');
-				if (datum[5].constructor !== 1) throw new Error('Already rented');
+				if (datum[5].index !== 1) throw new Error('Already rented');
 
 				// Get renter PKH
 				const renterAddress = await lucid.wallet.address();
@@ -272,8 +272,8 @@
 				});
 
 				// Payment to lender
-				const fee = datum[1].int * BigInt(days);
-				const lenderAddress = lucid.utils.credentialToAddress({ type: 'Key', hash: datum[0].bytes });
+				const fee = datum[1] * BigInt(days);
+				const lenderAddress = lucid.utils.credentialToAddress({ type: 'Key', hash: datum[0] });
 
 				// Build tx
 				const tx = await lucid.newTx()
