--- a/index.html
+++ b/index.html
@@ -254,15 +254,15 @@
 
 				// Updated datum as array
 				const updatedDatum = Data.to([
-					datum[0],
-					datum[1],
-					datum[2],
-					datum[3],
-					datum[4],
-					{ constructor: 0, fields: [renterPkh] },
-					{ constructor: 0, fields: [BigInt(deadline)] },
-					datum[7],
-					datum[8]
+					datum[0], // lender_pkh (already a string)
+					datum[1], // daily_fee (already a bigint)
+					datum[2], // min_days (already a bigint)
+					datum[3], // max_days (already a bigint)
+					{ constructor: datum[4].index, fields: [] }, // auto_relist (recreate the constructor)
+					{ constructor: 0, fields: [renterPkh] }, // renter_pkh (Some with renter's PKH)
+					{ constructor: 0, fields: [BigInt(deadline)] }, // rental_deadline (Some with deadline)
+					datum[7], // nft_policy (already a string)
+					datum[8]  // nft_name (already a string)
 				]);
 
 				// Redeemer for Rent
