--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 							continue;
 						}
 						
-						// Check if renter_pkh (index 5) indicates not rented
+						// Check if renter_pkh (index 5) indicates not rented (None = index 1)
 						const renter_pkh = datum[5];
-						if (renter_pkh && renter_pkh.constructor === 1) { // Only show available (not rented)
+						if (renter_pkh && renter_pkh.index === 1) { // Only show available (not rented)
 							const nft_name = datum[8] && typeof datum[8] === 'string' ? hexToString(datum[8]) : 'Unknown';
 							const daily_fee = datum[1] && typeof datum[1] === 'bigint' ? Number(datum[1]) : 0;
 							const min_days = datum[2] && typeof datum[2] === 'bigint' ? Number(datum[2]) : 0;
@@ -187,21 +187,17 @@
 				const lenderAddress = await lucid.wallet.address();
 				const lenderPkh = lucid.utils.getAddressDetails(lenderAddress).paymentCredential.hash;
 
-				// Create datum as constructor 0 with fields
-				const datum = Data.to({
-					constructor: 0,
-					fields: [
-						lenderPkh,
-						BigInt(daily_fee),
-						BigInt(min_days),
-						BigInt(max_days),
-						{ constructor: auto_relist ? 1 : 0, fields: [] },
-						{ constructor: 1, fields: [] }, // None for renter
-						{ constructor: 1, fields: [] }, // None for deadline
-						nft_policy,
-						nft_name
-					]
-				});
+				const datum = Data.to([
+					lenderPkh,
+					BigInt(daily_fee),
+					BigInt(min_days),
+					BigInt(max_days),
+					{ constructor: auto_relist ? 1 : 0, fields: [] },
+					{ constructor: 1, fields: [] },
+					{ constructor: 1, fields: [] },
+					nft_policy,
+					nft_name
+				]);
 
 				const assets = {
 					[`${nft_policy}${nft_name}`]: 1n,
@@ -240,7 +236,7 @@
 				const datum = rawDatum;
 
 				if (days < Number(datum[2]) || days > Number(datum[3])) throw new Error('Days out of range');
-				if (datum[5].constructor !== 1) throw new Error('Already rented');
+				if (datum[5].index !== 1) throw new Error('Already rented');
 
 				// Get renter PKH
 				const renterAddress = await lucid.wallet.address();
@@ -256,20 +252,17 @@
 				const deadline = currentTime + (days * 86400000); // Use lower bound approximation
 
 				// Updated datum
-				const updatedDatum = Data.to({
-					constructor: 0,
-					fields: [
-						datum[0],
-						datum[1],
-						datum[2],
-						datum[3],
-						{ constructor: datum[4].constructor, fields: [] },
-						{ constructor: 0, fields: [renterPkh] },
-						{ constructor: 0, fields: [BigInt(deadline)] },
-						datum[7],
-						datum[8]
-					]
-				});
+				const updatedDatum = Data.to([
+					datum[0],
+					datum[1],
+					datum[2],
+					datum[3],
+					{ constructor: datum[4].index, fields: [] },
+					{ constructor: 0, fields: [renterPkh] },
+					{ constructor: 0, fields: [BigInt(deadline)] },
+					datum[7],
+					datum[8]
+				]);
 
 				// Redeemer for Rent
 				const redeemer = Data.to({
